syntax = "proto3";

package facilities;

import "common.proto";

service EstablishmentsService {
  rpc GetEstablishments(GetEstablishmentsRequest) returns (GetEstablishmentsResponse);
  rpc CreateEstablishment(CreateEstablishmentRequest) returns (Establishment);
  rpc UpdateEstablishment(UpdateEstablishmentRequest) returns (Establishment);
  rpc DeleteEstablishment(UpdateEstablishmentRequest) returns (common.Empty);
}

message Establishment {
  int32 id = 1;
  string ownerId = 2;
  string name = 3;
  optional string description = 4;
  optional string address = 5;
  optional string city = 6;
  optional string state = 7;
  optional string zipCode = 8;
  string tz = 9;
  bool active = 10;
  optional string createdAt = 11;
  optional string updatedAt = 12;
}

message GetEstablishmentsRequest {
  optional common.PaginationRequest pagination = 1;
}

message GetEstablishmentsResponse {
  repeated Establishment items = 1;
  int32 total = 2;
}

message CreateEstablishmentRequest {
  string name = 1;
  string description = 2;
  string address = 3;
  string city = 4;
  string state = 5;
  string zipCode = 6;
  string tz = 7;
}

message UpdateEstablishmentRequest {
  int32 id = 1;
  CreateEstablishmentRequest model = 2;
}
